# tensorflow_cpp

./: .gitignore  README.md  copy_headers.sh  copy_libraries.sh  fix_rpath.sh  run.sh
examples/TF2Test/: CMakeLists.txt  main.cpp  run.sh
